# mis-gastos-personales

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: firebase_auth.py  main.py
frontend/: .env.local.example  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx  providers.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts  auth-context.tsx  firebase.ts
